footer content no longer overflows in very small viewports

--- a/app/app.css
+++ b/app/app.css
@@ -559,6 +559,9 @@ p {
     min-height: 1px;
     padding: 15px 15px 0px 15px;
     width: 33.33%; }
+    @media screen and (max-width: 350px) {
+      .footer .footer-col {
+        padding: 8px 5px 0px 5px; } }
   .footer .social-media li {
     display: inline-block;
     padding: 0 10px; }
