--- a/app/components/scss/main.scss
+++ b/app/components/scss/main.scss
@@ -323,6 +323,10 @@ p {
         min-height:1px;
         padding: 15px 15px 0px 15px;
         width: 33.33%;
+
+        @include mini {
+            padding: 8px 5px 0px 5px;
+        }
     }
 
     .social-media {
